# cortes-soberania

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pendencias_tiktok.md  proximas_tarefas.md  pyproject.toml  qualidade_melhorias.md  run_gui.sh  schema.sql  scripts_uteis.txt  vulture_whitelist.py
.claude/agents/: prompt-engineer.md  video-editor.md
.claude/commands/: novo-canal.md  status.md  tecnicas-monetizacao.md  triagem.md
.github/workflows/: release.yml
config/: canais.yaml  output_canais.yaml
config/criterios/: soberania.md
docs/: api.md  arquitetura.md  fine_tuning.md  frontend.md  hooks_videos_curtos.md  install.md  pipeline.md  prompts.md
evals/: dataset.jsonl
migrations/: 001_training_examples.sql  002_horizontal_youtube_id.sql  003_processing_since.sql  004_legendas_queimadas.sql  005_render_formats.sql  005_youtube_sync.sql  006_canais_table.sql  007_output_canais.sql
prompts/: gerar_metadata_clip.txt  identificar_cortes.txt  triagem_metadata.txt  triagem_transcript.txt
prompts/soberania/: identificar_cortes.txt  triagem_caption.txt
scripts/: backup_db.sh  check_stuck.sh  healthcheck.sh  restart_pipeline.sh  run_discover.sh  run_pipeline.sh
src/canal_soberania/: __init__.py  alert.py  cli.py  config.py  db.py  llm.py  logger.py  models.py
src/canal_soberania/alerts/: __init__.py  base.py  router.py  smtp.py  telegram.py
src/canal_soberania/api/: __init__.py  app.py  auth.py  deps.py  sse.py
src/canal_soberania/core/: __init__.py  events.py  platforms.py  repositories.py  stage.py  state.py  strategies.py
src/canal_soberania/evals/: __init__.py  build_dataset.py  compare.py  models.py  runner.py
tests/: fakes.py  test_alert.py  test_alerts.py  test_cli.py  test_coverage_extra.py  test_db.py  test_discover.py  test_download.py  test_edit.py  test_eval_runner.py  test_events.py  test_find_clips.py  test_health.py  test_llm_backends.py  test_metadata.py  test_models.py  test_output_canais.py  test_pipeline_service.py  test_platforms_tiktok.py  test_platforms_youtube.py  test_repositories.py  test_stage.py  test_state.py  test_strategies.py  test_sync_youtube.py  test_thumbnail.py  test_transcribe.py  test_transcribers.py  test_triage_caption.py  test_triage_metadata.py  test_triage_transcript.py  test_upload_tiktok.py  test_upload_youtube.py
tests/api/: conftest.py  test_auth.py  test_canais.py  test_clips.py  test_config.py  test_events.py  test_output_canais.py  test_stages.py  test_videos.py
tests/e2e/: test_journeys.py
ui/: .npmrc  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
ui/e2e/: journeys.spec.ts
ui/src/: App.tsx
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src/lib/: api.ts  (+10 more)
(+77 files in other folders)
