[project]
name = "canal-soberania"
version = "0.1.0"
description = "Pipeline automatizado de cortes focado em soberania nacional"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    # download e fontes
    "yt-dlp>=2025.1.0",
    "google-api-python-client>=2.140.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
    # transcrição
    "faster-whisper>=1.0.3",
    # LLM
    "anthropic>=0.40.0",
    # processamento de vídeo / imagem
    "mediapipe>=0.10.14",
    "pillow>=10.4.0",
    "opencv-python-headless>=4.10.0",
    "numpy>=1.26.0",
    # infra
    "pydantic>=2.9.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.1",
    "loguru>=0.7.2",
    "typer>=0.12.0",
    "tenacity>=9.0.0",  # retry decorator
    "nvidia-cublas-cu12>=12.9.2.10",
    "nvidia-cudnn-cu12>=9.22.0.52",
]

[project.scripts]
cs = "canal_soberania.cli:app"
cs-gui = "canal_soberania.gui.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.11.0",
    "ipython>=8.27.0",
]
gui = [
    "PySide6>=6.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/canal_soberania"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "W",       # pycodestyle
    "F",            # pyflakes
    "I",            # isort
    "B",            # flake8-bugbear
    "UP",           # pyupgrade
    "RUF",          # ruff-specific
    "SIM",          # flake8-simplify
    "C90",          # McCabe complexity
    "S",            # bandit (segurança)
    "T20",          # print() avulso
    "PL",           # pylint
]
ignore = [
    "E501",         # line length (gerenciado por format)
    "PLC0415",      # import-outside-top-level (lazy imports intencionais no projeto)
    "PLR0913",      # too-many-arguments (>8 é genuíno; aceitável com DI pattern)
    "PLR0911",      # too-many-return-statements (guards em stages)
    "PLR0912",      # too-many-branches
    "PLR0915",      # too-many-statements (stages de orquestramento)
    "PLR2004",      # magic-value (corrigido individualmente com constantes)
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 8

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
ignore_missing_imports = true  # libs como yt-dlp não têm stubs

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["canal_soberania"]

[tool.coverage.report]
fail_under = 75
